--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 .toast__container {
   /* border-left: 10px solid var(--color-icon);
   background-color: var(--color-background); */
-
+  width: 40rem;
   max-width: 40rem;
   height: 10rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
