--- a/style.css
+++ b/style.css
@@ -233,3 +233,36 @@ transform: translate(-50%);
 .icon__picture-warning {
   fill: var(--color-yellow-600);
 }
+
+
+/* ///////////////////// */
+.toast__progress-bar {
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.toast__progress-bar-success{
+background-color:var(--color-green-500)
+}
+.toast__progress-bar-error{
+background-color:var(--color-red-500)
+}
+.toast__progress-bar-info{
+background-color:var(--color-blue-500)
+}
+.toast__progress-bar-warning{
+background-color:var(--color-yellow-500)
+}
+
+.toast__remain-seconds {
+  font-size: 1.3rem;
+  color: var(--color-gray); 
+
+ position: absolute;
+ right: 20px;
+ bottom: 16px;
+}
+
